fix border, spacing and text

--- a/src/_partials/_border.scss
+++ b/src/_partials/_border.scss
@@ -1,5 +1,7 @@
 // Border with
-$border: (0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60, 65, 70, 75, 80, 85, 90, 95, 100);
+$borderBasis: 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10;
+$borderExtend: 15, 20, 25, 30, 35, 40, 45, 50, 55, 60, 65, 70, 75, 80, 85, 90, 95, 100;
+$border: join($borderBasis, $borderExtend);
 
 @each $value in $border {
   .b-#{$value} {
