--- a/src/_partials/_spacing.scss
+++ b/src/_partials/_spacing.scss
@@ -1,31 +1,6 @@
-$space: (
-  'auto',
-  0,
-  1,
-  2,
-  3,
-  4,
-  5,
-  10,
-  15,
-  20,
-  25,
-  30,
-  35,
-  40,
-  45,
-  50,
-  55,
-  60,
-  65,
-  70,
-  75,
-  80,
-  85,
-  90,
-  95,
-  100
-);
+$spaceBasis: 'auto', 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10;
+$spaceExtend: 15, 20, 25, 30, 35, 40, 45, 50, 55, 60, 65, 70, 75, 80, 85, 90, 95, 100;
+$space: join($spaceBasis, $spaceExtend);
 
 $type: (
   'p': 'padding',
